--- a/style.css
+++ b/style.css
@@ -19,9 +19,9 @@
   --fs-base: 1rem;
   --fs-xl: 1.25rem;
   --fs-2xl: 1.5rem;
-  --fluid-sm: clamp(var(--fs-xs), 0.6989rem + 0.2273vw, var(--fs-sm));
-  --fluid-base: clamp(var(--fs-sm), 0.8239rem + 0.2273vw, var(--fs-base));
-  --fluid-lg: clamp(var(--fs-xl), 1.1477rem + 0.4545vw, var(--fs-2xl));
+  --fluid-sm: clamp(var(--fs-xs), 0.7143rem + 0.1786vw, var(--fs-sm));
+  --fluid-base: clamp(var(--fs-sm), 0.8393rem + 0.1786vw, var(--fs-base));
+  --fluid-lg: clamp(var(--fs-xl), 1.1786rem + 0.3571vw, var(--fs-2xl));
   --fw-md: 500;
   --fw-extrabold: 800;
   --lh: 1.5;
@@ -72,4 +72,10 @@ body {
   display: flex;
   flex-direction: column;
   gap: var(--space-300);
+}
+
+.card__image {
+  width: 100%;
+  object-fit: cover;
+  border-radius: 10px;
 }
